<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_sort"
          android:title="@string/menu_sort"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_by_title"
                      android:title="@string/sort_by_title"
                      android:checkable="true" />

                <item android:id="@+id/sort_by_date"
                      android:title="@string/sort_by_date"
                      android:checkable="true" />
            </group>
        </menu>
    </item>
</menu>