<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="8dp">

    <EditText
            android:id="@+id/etAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_author"
            android:inputType="textPersonName"
            android:autofillHints="username,personName,givenName,familyName" />

    <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/legend"
            android:background="@drawable/search_view_background"
            android:padding="8dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF"
            android:inputType="text"
            android:autofillHints="password,newPassword" />

    <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="end"/>
</LinearLayout>